[project]
name = "moodmap-env"
version = "0.1.0"
description = "MoodMap OpenEnv environment"
authors = [{ name = "Baddila" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"
